--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "remit-server-v1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "avinashgupta.works@gmail.com",
